--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </section>
         
         <section class="wishlist">
-            <h2>Cose che vorrei</h2>
+            <h2>I miei desideri...</h2>
             <ul>
                 <li>
                     <strong>KTM SX 125 2017</strong>
