--- a/ktm.html
+++ b/ktm.html
@@ -3,6 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background-image: url('https://i.pinimg.com/564x/c9/b0/29/c9b029c1052cd6cece498586ba9d45f0.jpg');
+            background-attachment: fixed;  /* L'immagine di sfondo rimarrà fissa durante lo scroll */
+            background-size: cover;       /* L'immagine copre tutta l'area disponibile */
+            background-position: center;  /* L'immagine sarà centrata */
+            font-family: Arial, sans-serif;
+        }
+
+        /* Contenuto della pagina */
+        .content {
+            height: 1500px; /* Aumenta la lunghezza della pagina per testare lo scroll */
+            padding: 20px;
+            color: white; /* Colore del testo per contrastare con lo sfondo */
+        }
+    </style>
+</head>
+<body>
+    <div class="content">
+    </div>   
+    
     <title>Lo Splendido KTM 125</title>
     <link rel="stylesheet" href="styles.css">
 </head>
