--- a/ktm.html
+++ b/ktm.html
@@ -3,7 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+    
+ <style>
+    body {
+        background-image: url('https://i.ytimg.com/vi/95DXQzFTOD0/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLALYXNFnPoOsYQEz4xitxaEKZy5iw'); /* URL dell'immagine dello sfondo */
+        background-size: cover; /* L'immagine riempie l'intero schermo */
+        background-position: center; /* Centra l'immagine */
+        background-attachment: fixed; /* Fissa l'immagine per un effetto parallax */
+        background-repeat: no-repeat; /* Evita ripetizioni */
+        font-family: Arial, sans-serif; /* Migliora la leggibilità */
+        color: #ffffff; /* Testo bianco per contrasto */
+    }
+
+    header, section, h1, h2, h3, p, ul, a {
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); /* Aggiunge leggibilità al testo */
+    }
+
+    a.button {
+        display: inline-block;
+        padding: 10px 20px;
+        color: #fff;
+        background-color: #ff6600;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+        box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+    }
+
+    a.button:hover {
+        background-color: #ff4500; /* Cambia colore al passaggio del mouse */
+    }
+</style>
+
     
     <title>Lo Splendido KTM 125</title>
     <link rel="stylesheet" href="styles.css">
