--- a/ktm.html
+++ b/ktm.html
@@ -6,7 +6,7 @@
     
  <style>
     body {
-        background-image: url('https://i.ytimg.com/vi/95DXQzFTOD0/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLALYXNFnPoOsYQEz4xitxaEKZy5iw'); /* URL dell'immagine dello sfondo */
+        background-image: url('https://img.freepik.com/foto-gratuito/splendido-paesaggio-della-norvegia_181624-29404.jpg?t=st=1733587907~exp=1733591507~hmac=3c3f1b0aab3ef4029c235eee6005d2f82e4f5300f6cc12d9925a2014cd71ea99&w=1380'); /* URL dell'immagine dello sfondo */
         background-size: cover; /* L'immagine riempie l'intero schermo */
         background-position: center; /* Centra l'immagine */
         background-attachment: fixed; /* Fissa l'immagine per un effetto parallax */
