--- a/index.html
+++ b/index.html
@@ -5,6 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista dei Desideri di Leonardo</title>
     <link rel="stylesheet" href="styles.css">
+
+    <style>
+        body {
+            background-image: url('https://example.com/natalizio.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+        }
+
+        header, footer, h1, h2, p, li, a {
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+        }
+
+        .button {
+            display: inline-block;
+            padding: 10px 15px;
+            color: #ffffff;
+            background-color: #ff4500;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
+        }
+
+        .button:hover {
+            background-color: #ff6347;
+        }
+    </style>
+
+    
 </head>
 <body>
     <header>
