--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li>
                     <strong>KTM SX 125 2017</strong>
-                    <a href="ktm.html" class="button">Clicca qui</a>
+                    <a href="ktm.html" class="button" target="_self">Clicca qui</a>
                 </li>
                 <li>
                     <strong>Patente per 125</strong>
@@ -42,7 +42,7 @@
                 </li>
                 <li>
                     <strong>Logitech G PRO X SUPERLIGHT 2</strong>
-                    <a href="https://www.amazon.it/dp/B07W4DGPGF/ref=twister_B0CGVZ7SK1?_encoding=UTF8&th=1" class="button" target="_blank">Clicca qui</a>
+                    <a href="Logitech/logitech.html" class="button" target="_self">Clicca qui</a>
                 </li>
                 <li>
                     <strong>Sottoguanti</strong>
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>Grazie per aver visitato il mio sito! Spero vi sia utile.</p>
+        <p>Grazie per aver visitato il mio sito! Spero vi sia stato utile.</p>
     </footer>
 </body>
 </html>
