--- a/Logitech/logitech.html
+++ b/Logitech/logitech.html
@@ -13,10 +13,10 @@
         </header>
 
         <main>
-            <section>
-                <iframe width="840" height="472.5" src="https://www.youtube.com/embed/H1G0T1lUhdI?si=TBHbCb5qvNB4IC3M" 
+            <section style="text-align: center;">
+                <iframe width="1120" height="624" src="https://www.youtube.com/embed/H1G0T1lUhdI?si=TBHbCb5qvNB4IC3M" 
                 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
             </section>
             <section class="fine">
                 <h4>Vi ho convinti?</h4> 
