--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Lista dei Desideri di Leonardo</title>
     <link rel="stylesheet" href="styles.css">
 
+    <style>
+        body {
+            background-image: url("Immagini/natale2.png");
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            background-repeat: no-repeat;
+        }
+        
+    </style>
 </head>
 <body>
     <header>
@@ -23,7 +33,7 @@
         </section>
         
         <section class="wishlist">
-            <h2>I miei desideri...</h2>
+            <h2 style="background-color: orangered; border-radius: 5px; padding: 10px;">I miei desideri...</h2>
             <ul>
                 <li>
                     <strong>KTM SX 125 2017</strong>
