--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <main>
         <section class="intro">
             <p>
-                Cara mamma e caro papà, <br>
+                Cara mamma❤️e caro papà❤️, <br>
                 sono già volati via 16 anni della mia vita e sto iniziando a sentire già la vecchiaia in me...
                 Volevo fare questo sito per far sì che voi possiate leggere tutte le cose che vorrei in modo semplice
-                e anche per il mio divertimento.
+                e anche per il mio divertimento🥰.
             </p>
             <p>Tutti gli elementi sono elencati in ordine di importanza, quindi il primo è il mio preferito!</p>
         </section>
