--- a/ktm.html
+++ b/ktm.html
@@ -49,7 +49,7 @@
             <p>Il KTM SX 125 2017 è un capolavoro di ingegneria. Leggera, potente e perfetta anche su strada, questa moto rappresenta il sogno di ogni appassionato. Trasformare una KTM SX 125 2017 in una moto da supermotard è assolutamente possibile,<br> ma richiede una serie di modifiche per renderla adatta all’uso su asfalto. Le principali modifiche riguardano le ruote, i pneumatici, i freni, le sospensioni, il rapporto di trasmissione e l’impianto di illuminazione</p>
             <p>Alcune caratteristiche principali:</p>
             <ul>
-                <li>Motore 2 tempi ad alte prestazioni</li>
+                <li>Motore 2 tempi🤝 ad alte prestazioni</li>
                 <li>Maneggevolezza eccellente</li>
                 <li>Design accattivante e unico</li>
                 <li>una potenza di circa 34 cavalli, il che la rende molto potente per una moto da 125 cc</li>
@@ -84,7 +84,7 @@
     <main>
         <section class="fine"> 
             <h3>Convinti?</h3>
-            <p>Se siete stati convinti, passate da qui per acquistarlo:</p>
+            <p>Se siete stati convinti, passate da qui per acquistarlo😉:</p>
             <a href="https://www.subito.it/moto-e-scooter/ktm-sx-125-2017-milano-579413966.htm" target="_blank" class="button">Vai all'annuncio</a>
         </section>
     </main>
