--- a/ktm.html
+++ b/ktm.html
@@ -46,7 +46,7 @@
     <main>
         <section>
             <h2>Perché scegliere questa moto?</h2>
-            <p>Il KTM SX 125 2017 è un capolavoro di ingegneria. Leggera, potente e perfetta anche su strada, questa moto rappresenta il sogno di ogni appassionato. Trasformare una KTM SX 125 2017 in una moto da supermotard è assolutamente possibile,<br> ma richiede una serie di modifiche per renderla adatta all’uso su asfalto. Le principali modifiche riguardano le ruote, i pneumatici, i freni, le sospensioni, il rapporto di trasmissione e l’impianto di illuminazione</p>
+            <p>Il KTM SX 125 2017 è un capolavoro di ingegneria. Leggera, potente e perfetta anche su strada, questa moto rappresenta il sogno di ogni appassionato.Trasformare una KTM SX 125 2017 in una moto da supermotard è assolutamente possibile👌,<br> ma richiede una serie di modifiche per renderla adatta all’uso su asfalto. Le principali modifiche riguardano le ruote, i pneumatici, i freni, le sospensioni, il rapporto di trasmissione e l’impianto di illuminazione.</p>
             <p>Alcune caratteristiche principali:</p>
             <ul>
                 <li>Motore 2 tempi🤝 ad alte prestazioni</li>
