--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <h1>Lista dei Desideri di Leonardo</h1>
+        <h1>Lista dei Desideri di Leo</h1>
     </header>
     <main>
         <section class="intro">
