--- a/ktm.html
+++ b/ktm.html
@@ -52,7 +52,7 @@
                 <li>Motore 2 tempi🤝 ad alte prestazioni</li>
                 <li>Maneggevolezza eccellente</li>
                 <li>Design accattivante e unico</li>
-                <li>una potenza di circa 34 cavalli, il che la rende molto potente per una moto da 125 cc</li>
+                <li>una potenza di circa 34 cavalli✊, il che la rende molto potente per una moto da 125 cc</li>
             </ul>
         </section>
     </main>
