--- a/Logitech/logitech.html
+++ b/Logitech/logitech.html
@@ -19,7 +19,7 @@
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen ></iframe>
             </section>
             <section class="fine">
-                <h4>Vi ho convinti?</h4> 
+                <h4>Vi ho convinti anche qui?</h4> 
                 <a href="https://www.amazon.it/dp/B07W4DGPGF/ref=twister_B0CGVZ7SK1?_encoding=UTF8&th=1" class="button" target="_blank"> Cliccate qui</a>
             </div>
         </main>
