--- a/Logitech/logitech.html
+++ b/Logitech/logitech.html
@@ -20,7 +20,7 @@
             </section>
             <section class="fine">
                 <h4>Vi ho convinti anche qui?</h4> 
-                <a href="https://www.amazon.it/dp/B07W4DGPGF/ref=twister_B0CGVZ7SK1?_encoding=UTF8&th=1" class="button" target="_blank"> Cliccate qui</a>
+                <a href="https://www.amazon.it/dp/B07W4DGPGF/ref=twister_B0CGVZ7SK1?_encoding=UTF8&th=1" class="button" target="_blank"> Cliccatemi</a>
             </div>
         </main>
         
